# epitech-projects

./: README.md
BSQ/: Makefile
BSQ/include/: my.h
BSQ/src/: bsq_base.c  bsq_counter.c  bsq_printer.c  bsq_searcher.c  mini_printf.c  my_put_nbr.c  my_putstr.c
R-Type/: CMakeLists.txt  README.md  build.sh
R-Type/assets/FlappyBird-font/: info.txt
R-Type/assets/RType-font/: license.txt  readme.txt
R-Type/client/: CMakeLists.txt  README.md
R-Type/client/include/: ArgumentParser.hpp  DLLoader.hpp  EntityClient.hpp  Exceptions.hpp  GameClient.hpp  NetworkManagerClient.hpp
R-Type/client/include/Audio/: AAudio.hpp  IAudio.hpp  SFMLAudio.hpp
R-Type/client/include/Renderer/: ARenderer.hpp  AssetManager.hpp  AssetPlayerSelection.hpp  BackgroundSystem.hpp  BasicComp.hpp  ConfigSummary.hpp  DefaultValues.hpp  EnemySystem.hpp  GameEvent.hpp  GameRendering.hpp  IRenderer.hpp  MenuSystem.hpp  MenusRendering.hpp  PlayerSystem.hpp  SFMLRenderer.hpp  State.hpp  SubtitleComp.hpp
R-Type/client/src/: ArgumentParser.cpp  EntityClient.cpp  GameClient.cpp  NetworkManagerClient.cpp  main.cpp
R-Type/client/src/Audio/: SFMLAudio.cpp
R-Type/client/src/Renderer/: ARenderer.cpp  AssetManager.cpp  AssetPlayerSelection.cpp  BackgroundSystem.cpp  BasicComp.cpp  ConfigSummary.cpp  EnemySystem.cpp  GameRendering.cpp  MenuSystem.cpp  MenusRendering.cpp  PlayerSystem.cpp  SFMLRenderer.cpp  SubtitleComp.cpp
R-Type/config/: FlappyBirdGame.json  RTypeGame.json  RTypeGame4.json
R-Type/docs/: ECS-doc.md  RType-ECS.drawio  conf.py  ecs.rst  index.rst  network.rst
R-Type/networking/: CMakeLists.txt
R-Type/networking/include/: Logger.hpp  Packet.hpp
R-Type/networking/include/client/: ClientNetwork.hpp
R-Type/networking/include/network/: ANetwork.hpp  INetwork.hpp
R-Type/networking/include/server/: ServerNetwork.hpp
R-Type/networking/src/: Packet.cpp
R-Type/networking/src/client/: ClientNetwork.cpp
R-Type/networking/src/network/: ANetwork.cpp
R-Type/networking/src/server/: ServerNetwork.cpp
R-Type/server/: CMakeLists.txt  README.md
R-Type/server/include/: DLLoader.hpp  Exceptions.hpp  GameServer.hpp  NetworkManager.hpp  Physics.hpp  SFMLIncludes.hpp
R-Type/server/include/ECS/Component/: Types.hpp
R-Type/server/include/ECS/Configuration/: Exceptions.hpp  Parsing.hpp
R-Type/server/include/ECS/Entity/: Entity.hpp
R-Type/server/include/ECS/Registry/: Exceptions.hpp  Registry.hpp
R-Type/server/include/ECS/SparseArray/: Exceptions.hpp  SparseArray.hpp
R-Type/server/include/ECS/Systems/: Systems.hpp
R-Type/server/include/ECS/Zipper/: Zipper.hpp  ZipperIterator.hpp
R-Type/server/include/Game/: AGame.hpp  EventManager.hpp  FlappyBirdGame.hpp  IGame.hpp  RTypeGame.hpp
R-Type/server/src/: CMakeLists.txt  NetworkManager.cpp  Physics.cpp  Systems.cpp  main.cpp
R-Type/server/src/Exceptions/: CMakeLists.txt  ExceptionsDLLoader.cpp
R-Type/server/src/Game/: AGame.cpp  CMakeLists.txt  EventManager.cpp  FlappyBirdGame.cpp  RTypeGame.cpp
R-Type/server/src/GameServer/: CMakeLists.txt  GameServer.cpp
R-Type/tests/: connect-packet.sh
arcade/: LibsMakefile  Makefile  README.md
arcade/.github/workflows/: actions.yml
arcade/include/: Arcade.hpp  Core.hpp  DLLoader.hpp  ListModules.hpp
arcade/include/DisplayModules/: ADisplayModule.hpp  IDisplayModule.hpp
arcade/include/Entities/: Entity.hpp
arcade/include/Event/: Event.hpp  KeyboardEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
arcade/include/Exceptions/: Exceptions.hpp
arcade/include/GameModules/: AGameModule.hpp  IGameModule.hpp  MenuModule.hpp  NibblerModule.hpp  SnakeModule.hpp
arcade/src/: Core.cpp  main.cpp
arcade/src/DisplayModules/: ADisplayModule.cpp
arcade/src/Entities/: Entity.cpp
area/: .gitignore  docker-compose.yml
area/.github/: pull_request_template.md
area/server/: .env.example  package.json
imageCompressor/: CHANGELOG.md  Makefile  imagecompressor.cabal  package.yaml  stack.yaml
imageCompressor/.stack-work/: stack.sqlite3
imageCompressor/app/: main.hs
imageCompressor/src/: ParsingAlgo.hs
minishell/: Makefile
minishell/include/: proto.h
minishell/src/: array_utils.c  command_gestion.c  detect_redirect.c  env_error_handling.c  exec_error.c  get_command.c  get_envhome.c  get_pastdir.c  handle_redirect_file.c  main.c  my_cdir.c  my_cdir2.c  my_cdir_utils.c  my_envcpy.c  my_exit.c  my_exit_utils.c  my_segfault.c  my_setenv.c  my_setenv_utils.c  my_unsetenv.c  parse_command.c  path_handling.c  redirect_handler.c  strtok_array.c  utils.c  utilss.c  utilsss.c
myPaint/: Makefile  test.c
myPaint/include/: paint.h
myPaint/src/: display.c  draw_colors.c  draw_page.c  file_button.c  handle_colors.c  handle_events.c  init.c  list_utils.c  main.c  mini_printf.c  options_page.c  settings.c  utils.c
myRPG/: Makefile  pokemon1.txt  pokemon2.txt  pokemon3.txt
myRPG/config/: 3d_obj.txt  attack.txt  battle.txt  evolution1.txt  evolution2.txt  first_pokemon_intro.txt  pnj.txt  pokemon.txt  pokemon_dresseur.txt  text_pnj.txt
myRPG/include/: battle.h  display.h  free.h  game_menu.h  init.h  intro_proto.h  intro_struct.h  move_player.h  my.h  save.h  struct.h  utils.h
myRPG/maps/: game_map.txt  main_map.txt  map1.txt
myRPG/src/: begin_game.c  display_button.c  main.c  main_game.c  manage_event.c  read_map.c  resume_game.c  save_party.c  shop.c  speak_to_pnj.c  switch_pokemon.c  teleportation.c
my_printf/: Makefile  main.c
my_printf/include/: my.h
my_printf/src/: error_handler.c  int_len.c  my_all_hexa.c  my_all_octals.c  my_all_put_nbr.c  my_n.c  my_num_dig.c  my_printf.c  my_putchar.c  my_putstr.c  my_special_cases.c  my_strcpy.c  my_u_flag.c  plus.c  space.c  zero.c
my_printf/tests/: test.c
myftp/: Makefile
myftp/include/: myftp.h
myftp/src/: check_args.c  create_server.c  create_server_utils.c  display_help.c  handle_client.c  handle_commands.c  handle_commands2.c  handle_commands3.c  handle_commands_utils.c  handle_list.c  init_struct.c  main.c
mymarvin/: job_dsl.groovy  my_marvin.yml
raytracer/: README.md
raytracer/screenshots/: two_spheres_and_a_plane.ppm
(+86 files in other folders)
